Fix: overflow main content

--- a/css/app.css
+++ b/css/app.css
@@ -5,8 +5,8 @@
     overflow: hidden;
 }
 
-.main-content {
-    height: calc(100vh - 50px);
+.sidebar-main-content {
+    height: calc(100% - 50px);
     overflow: hidden;
 }
 
@@ -14,6 +14,10 @@
     height: 50px;
     overflow: hidden;
     color: white;
+}
+
+.main-content {
+    overflow-y: scroll;
 }
 
 .sidebar {
@@ -28,10 +32,6 @@
     height: 100%;
 }
 
-.cards-section {
-    overflow: hidden;
-
-}
 
 .admin {
     margin-top: auto;
